[package]
name = "tcp_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.38.1", features = [ "rt-multi-thread", "macros", "net", "io-util" ] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
